--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav a:hover{
 }
 
 .wavedown{
-    top: 0vh;
+    top: -1vh;
 }
 
 .waveup{
@@ -112,6 +112,40 @@ nav a:hover{
     background-color: rgb(128, 197, 253);
     width: 100%;
     height: 150vh;
+    color:white;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+#aboutusAnchor{
+    position: relative;
+    top: 15%;
+}
+
+#aboutusContent{
+    position: relative;
+    width: 40%;
+    top: 30%;
+    height: 60vh;
+    text-align: center;
+}
+
+#aboutusContent h1{
+   
+    margin-top: 4%;
+    margin-bottom: 4%;
+    font-size: 4.5vw;
+}
+
+
+#aboutusImage{
+    position: relative;
+    width: 20%;
+    top: 30%;
+    height: 60vh;
+    
 }
 
 #members{
@@ -119,4 +153,60 @@ nav a:hover{
     width: 100%;
     height: 100vh;
     background-color: #0c0c0c;
+}
+
+#aboutusImage svg{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    
+}
+
+#elevator{
+    fill: white;
+    animation: alienElevator 2s linear infinite alternate;
+}
+
+@keyframes alienElevator {
+    25% {transform: translateX(0.5%); }
+    50% {transform: translateX(0%); }
+    75% {transform: translateX(-0.5%);}
+    100%{transform: translateX(0%); }
+    
+}
+
+
+#Alien1{
+    transform: translateY(20%);
+    animation: alien 2s linear infinite alternate;
+
+
+}
+
+@keyframes alien {
+    25% {transform: translateY(15%);}
+    50% {transform: translateY(8%);}
+    75% {transform: translateY(0%);}
+    100%{transform: translateY(-8%);}
+
+}
+
+#hand{
+    transform: translateY(5px);
+    transform: translateX(5px);
+    transform-origin: center;
+    transform-box: fill-box;
+    animation: handanimation 1s linear infinite alternate;
+}
+
+@keyframes handanimation {
+    0% {transform: rotateZ(30deg);}
+    18% {transform: rotateZ(20deg);}
+    36% {transform: rotateZ(10deg);}
+    50%{transform: rotateZ(0deg);}
+    68% {transform: rotateZ(10deg);}
+    86% {transform: rotateZ(20deg);}
+    100% {transform: rotateZ(30deg);}
+    
+    
 }
