--- a/style.css
+++ b/style.css
@@ -160,14 +160,14 @@ nav a:hover{
 
 #elevator{
     fill: white;
-    animation: alienElevator 2s linear infinite alternate;
+    animation: alienElevator 3s linear infinite alternate;
 }
 
 @keyframes alienElevator {
-    25% {transform: translateX(0.5%); }
-    50% {transform: translateX(0%); }
-    75% {transform: translateX(-0.5%);}
-    100%{transform: translateX(0%); }
+    25% {opacity: 0.3; }
+    50% {opacity: 0.5; }
+    75% {opacity: 0.75;}
+    100%{opacity:  1; }
 }
 
 
@@ -260,6 +260,6 @@ nav a:hover{
 #patriksehnoutek{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 150vh;
     background-color: rgb(128, 197, 253);
 }
