--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ nav a:hover{
     100% {transform: rotateZ(30deg);}
 }
 
+/*MEMBERS*/
 #members{
     position: relative;
     width: 100%;
@@ -214,6 +215,7 @@ nav a:hover{
     font-size: 4em;
 }
 
+/*Dalibor Kralik*/
 #daliborkralik{
     margin-top: 10%;
     position: relative;
@@ -251,50 +253,84 @@ nav a:hover{
     font-size: 0.8em;
 }
 
-#daliborRight .membersNadpis{
+#daliborRight h1{
     padding-bottom: 3%;
     font-size: 3em;
     
 }
 
+/*Patrik Sehnoutek*/
 #patriksehnoutek{
     position: relative;
     width: 100%;
-    height: 160vh;
-    background-image: url("background.png");
+    height: 180vh;
+    background-color: white;
+    /*background-color: rgb(128, 197, 253);*/
+    /*background-image: url("background.png");
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: fixed;*/
     overflow: hidden;
 }
 
-#raketaSVG{
-    position: absolute;
-    
-    width: 10%;
-    left: 8%;
-    bottom: 50vh;
-    height: 47vh;
-    animation: raketa 2s linear infinite alternate;
-    
-}
 
 
-
-
-#raketaSVG img{
+#patriksehnoutekContent{
+    position: relative;
+    padding-top: 25%;
+    padding-bottom: 25%;
     width: 100%;
-    height: auto;
-    transform: rotateZ(45deg);
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-
-@keyframes raketa {
-        to{transform: translateY(-10%);}
+#patrikleft{
+    text-align: center;
+    width: 40%;
+    height: 100%;   
 }
 
+#patrikleft svg{
+    position: relative;
+    top:-100px;
+    width: 100%;
+}
 
+#codeLines{
+    animation: lineOpacity infinite alternate ease-in 2s;
+}
 
+@keyframes lineOpacity {
+    to{opacity: 0.2;}
+    
+}
+
+#mouse{
+    animation: mouseMovement infinite alternate 4s linear;
+}
+
+@keyframes mouseMovement {
+    to{transform: translateX(100px);}
+}
+#patrikright h1{  
+    padding-bottom: 5%;
+    font-size: 2.5em;
+}
+
+#patrikright h1 a{
+   color: black;
+}
+
+#patrikright{
+    text-align: center;
+    padding: 1%;
+    position: relative;
+    width: 35%;
+    color: black;
+    height: 100%;
+}
+/*Marcel Feiler*/
 #marcelfeiler{
     position: relative;
     width: 100%;
