--- a/style.css
+++ b/style.css
@@ -262,23 +262,21 @@ nav a:hover{
 /*Patrik Sehnoutek*/
 #patriksehnoutek{
     position: relative;
+    padding-top: 20%;
+    padding-bottom: 20%;
     width: 100%;
-    height: 180vh;
+    height: 150vh;
     background-color: white;
-    /*background-color: rgb(128, 197, 253);*/
-    /*background-image: url("background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;*/
     overflow: hidden;
 }
 
-
+#patriksehnoute .waveup{
+    bottom: -2vh;
+    z-index: 1000;
+}
 
 #patriksehnoutekContent{
     position: relative;
-    padding-top: 25%;
-    padding-bottom: 25%;
     width: 100%;
     height: 100%;
     display: flex;
@@ -287,13 +285,15 @@ nav a:hover{
 
 #patrikleft{
     text-align: center;
-    width: 40%;
+    width: 30%;
     height: 100%;   
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #patrikleft svg{
     position: relative;
-    top:-100px;
     width: 100%;
 }
 
@@ -313,27 +313,54 @@ nav a:hover{
 @keyframes mouseMovement {
     to{transform: translateX(100px);}
 }
+
+#patrikright{
+    text-align: center;
+    padding: 1%;
+    position: relative;
+    width: 40%;
+    color: black;
+    height: 100%;
+    font-size: 0.8em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 #patrikright h1{  
     padding-bottom: 5%;
-    font-size: 2.5em;
+    font-size: 3em;
 }
 
 #patrikright h1 a{
    color: black;
 }
 
-#patrikright{
-    text-align: center;
-    padding: 1%;
-    position: relative;
-    width: 35%;
-    color: black;
-    height: 100%;
-}
 /*Marcel Feiler*/
 #marcelfeiler{
+    overflow: hidden;
     position: relative;
     width: 100%;
     height: 130vh;
 }
 
+#marcelfeiler svg{
+    position: absolute;
+    top: 10vh;
+    left: -1%;
+    width: 101%;
+    stroke-linecap: round;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 3600;
+    animation: dash 20s linear alternate infinite;
+}
+
+@keyframes dash {
+    from {
+      stroke-dashoffset: 0;
+    }
+    to {
+      stroke-dashoffset: 3600;
+    }
+  }
