--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ nav a:hover{
 #members{
     position: relative;
     width: 100%;
-    height: 400vh;
+    height: 450vh;
     background-color: #0c0c0c;
 }
 
@@ -220,7 +220,7 @@ nav a:hover{
     margin-top: 10%;
     position: relative;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     justify-content: space-evenly;
 }
@@ -230,7 +230,7 @@ nav a:hover{
     background-color: rgb(128, 197, 253);
     box-shadow: 10px 2px 10px 5px #3673A5;
     width: 25%;
-    height: 100%;
+    height: 90%;
     display: flex;
     justify-content: center;
     z-index: 10;
@@ -245,6 +245,10 @@ nav a:hover{
 
 #daliborRight{
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 40%;
     height: 100%;
     text-align: center;
@@ -252,12 +256,18 @@ nav a:hover{
     z-index: 10;
     overflow: hidden;
     font-size: 0.8em;
+    padding-bottom: 10%;
 }
 
 #daliborRight h1{
     padding-bottom: 3%;
     font-size: 3em;
     
+}
+
+#daliborkralikNavigation{
+    position: absolute;
+    top: -20vh;
 }
 
 /*Patrik Sehnoutek*/
@@ -271,10 +281,7 @@ nav a:hover{
     overflow: hidden;
 }
 
-#patriksehnoutek .waveup{
-    bottom: -1vh;
-    z-index: 11;
-}
+
 
 #patriksehnoutekContent{
     position: relative;
@@ -282,6 +289,11 @@ nav a:hover{
     height: 100%;
     display: flex;
     justify-content: space-evenly;
+}
+
+#patriksehnoutekNavigation{
+    position: absolute;
+    top: -16vh;
 }
 
 #patrikLeft{
@@ -343,7 +355,9 @@ nav a:hover{
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
+    top: -2vh;
+    
 }
 
 #marcelLeft{
@@ -357,8 +371,9 @@ nav a:hover{
     justify-content: center;
     flex-direction: column;
     left:10%;
-    top:0%;
+    top:5%;
     text-align: center;
+    z-index: 2;
 }
 
 #marcelLeft h1{  
@@ -383,7 +398,7 @@ nav a:hover{
     position: absolute;
     left: -1%;
     width: 75%;
-    bottom: 12%;
+    bottom: 10%;
     z-index: 2;
     stroke-linecap: round;
     stroke-dashoffset: 0;
@@ -400,3 +415,42 @@ nav a:hover{
       stroke-dashoffset: 600;
     }
   }
+
+#lukaschytil{
+      
+    position: relative;
+    width: 100%;
+    height: 150vh;
+    background-image: linear-gradient(35deg, #80c5fd 50%, #0c0c0c 50%);
+
+}
+
+#memberButtons{
+    margin-top: 10vh;
+    width: 60%;
+    position: relative;
+    height: 15vh;
+    left:  20%;
+    right: 20%;
+    display: flex;
+    justify-content: center;
+    
+    column-gap: 20px;
+    align-items: center;    
+    flex-wrap: wrap;
+}
+
+#memberButtons a{
+    text-align: center;
+    text-decoration: none;
+    width: 26%;
+    background-color: #0c0c0c;
+    border: white 2px solid;
+    color: white;
+    padding: 0.5%;
+    border-radius: 40px;
+}
+
+#memberButtons a:hover{
+    animation: prechod 0.5s forwards alternate;
+}
