--- a/style.css
+++ b/style.css
@@ -216,6 +216,37 @@ nav a:hover{
     font-size: 4em;
 }
 
+
+#memberButtons{
+    margin-top: 10vh;
+    width: 60%;
+    position: relative;
+    height: 15vh;
+    left:  20%;
+    right: 20%;
+    display: flex;
+    justify-content: center;
+    
+    column-gap: 20px;
+    align-items: center;    
+    flex-wrap: wrap;
+}
+
+#memberButtons a{
+    text-align: center;
+    text-decoration: none;
+    width: 26%;
+    background-color: #0c0c0c;
+    border: white 2px solid;
+    color: white;
+    padding: 0.5%;
+    border-radius: 40px;
+}
+
+
+#memberButtons a:hover{
+    animation: prechod 0.5s forwards alternate;
+}
 /*Dalibor Kralik*/
 #daliborkralik{
     margin-top: 10%;
@@ -362,7 +393,7 @@ nav a:hover{
     
 }
 
-#marcelLeft{
+#marcelLeft, #lukasRight{
     position: absolute;
     width: 40%;
     height: 60%;
@@ -372,29 +403,38 @@ nav a:hover{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    left:10%;
-    top:5%;
     text-align: center;
     z-index: 2;
 }
 
-#marcelLeft h1{  
+#marcelLeft{
+    left:10%;
+    top:5%;
+}
+
+#marcelLeft h1, #lukasRight h1{  
     padding-bottom: 8%;
     font-size: 3em;
 }
 
-#marcelRight{
+
+
+#marcelRight, #lukasLeft{
     position: absolute;
     width: 25%;
     height: 60%;
     padding: 1%;
-    right:5%;
-    bottom:10%;
     z-index: 3;
     background-color: rgb(128, 197, 253);
-    box-shadow: 15px 10px 10px 10px #3673A5;
     
 }
+
+#marcelRight{
+    right:5%;
+    bottom:10%;
+    box-shadow: 10px 4px 10px 5px #3673A5;
+}
+
 
 #marcelfeiler svg{
     position: absolute;
@@ -419,41 +459,40 @@ nav a:hover{
   }
 
 #lukaschytil{
-      
+    background-color: #0c0c0c;   
     position: relative;
     width: 100%;
-    height: 150vh;
-    background-image: linear-gradient(35deg, #80c5fd 50%, #0c0c0c 50%);
-
-}
-
-#memberButtons{
-    margin-top: 10vh;
-    width: 60%;
-    position: relative;
-    height: 15vh;
-    left:  20%;
-    right: 20%;
-    display: flex;
-    justify-content: center;
+    height: 120vh;
+    overflow: hidden;
     
-    column-gap: 20px;
-    align-items: center;    
-    flex-wrap: wrap;
 }
 
-#memberButtons a{
-    text-align: center;
-    text-decoration: none;
-    width: 26%;
-    background-color: #0c0c0c;
-    border: white 2px solid;
-    color: white;
-    padding: 0.5%;
-    border-radius: 40px;
+#lukasRight{
+    right:10%;
+    top:0;
+
 }
 
+#lukasLeft{
+    left:10%;
+    top:20%;
+    box-shadow: -10px 4px 10px 5px #3673A5;
+}
 
-#memberButtons a:hover{
-    animation: prechod 0.5s forwards alternate;
+#lukaschytil svg{
+    position: absolute;
+    right: -1%;
+    width: 75%;
+    bottom: 10%;
+    z-index: 2;
+    stroke-linecap: round;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 60;
+    animation: dash 20s linear normal infinite;
+
+}
+
+#lukaschytilNavigation{
+    position: absolute;
+    top: 10%;
 }
