--- a/style.css
+++ b/style.css
@@ -18,9 +18,16 @@ p{
     font-size: 1em;
 }
 
+
+
 html{
     scroll-behavior: smooth;
     font-size: 16px;
+}
+
+
+body{
+   
 }
 
 #intro{
@@ -61,7 +68,7 @@ html{
     z-index: 2;
     width: 100%;
     position: relative;
-    height: 150vh;
+    height: 807vh;
     background-color: #0c0c0c;
 }
 
@@ -206,7 +213,7 @@ nav a:hover{
 #members{
     position: relative;
     width: 100%;
-    height: 450vh;
+    height: 657vh;
     background-color: #0c0c0c;
 }
 
@@ -249,7 +256,7 @@ nav a:hover{
 }
 /*Dalibor Kralik*/
 #daliborkralik{
-    margin-top: 10%;
+    margin-top: 12vh;
     position: relative;
     width: 100%;
     height: 80vh;
@@ -551,4 +558,13 @@ nav a:hover{
 
 #light{
     fill: #888888;
+}
+
+footer{
+    width: 100%;
+    height: 50vh;
+    position: relative;
+    border: red solid 2px;
+    bottom: 0;
+    z-index: 100;
 }
